# mmacrs

./: .gitignore  README.md  alembic.ini  langgraph.json  main.py  products.csv  pyproject.toml
macrs/: __init__.py  llm.py  models.py  orchestrator.py  planner.py  reflection.py  router.py  state.py  studio.py
macrs/agents/: __init__.py  ask.py  base.py  chitchat.py  recommend.py
scripts/: chat.py  db.py  ingest.py  retrieve.py  smoke.py
version/: 20260203_03_embedding_dim_768.py
